test/valid/60294_shadowing/shadowing.mag
-- Author: 60294, Pedro Rosa
fun main(_): Unit -> Unit =
    var x: Int = 5;
    var x: String = "shadow";
    print(x)