test/invalid-syntax/58196_var_outside/var_outside.mag
-- Author: 58196, Pedro Lopes

-- Var's cannot be declared outside of a funcftion

var vari : Int = 42

fun main (_) : Unit -> Unit =
  print(vari)
